--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-src/data/downloaded_files/
-src/data/BeerAdvocate/
-src/data/RateBeer/
+data/
 
 *.tar.gz
 *.txt.gz
+
+.ipynb_checkpoints/
 
 __pycache__/
 *.pyc
